<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="auto"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/detail_data_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical"
                android:visibility="visible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_failed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/text_failed_load"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.6" />

                    <com.google.android.material.appbar.AppBarLayout
                        android:id="@+id/app_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.appbar.MaterialToolbar
                            android:layout_width="match_parent"
                            android:layout_height="?actionBarSize"
                            app:title="@string/app_name" />
                    </com.google.android.material.appbar.AppBarLayout>


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/detail_image"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/profile_image"
                        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

                    <TextView
                        android:id="@+id/detail_name"
                        style="@style/TextNameDetailUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/name"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@+id/detail_image" />

                    <TextView
                        android:id="@+id/detail_username"
                        style="@style/TextUsernameDetailUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/username"
                        android:textSize="14sp"
                        app:layout_constraintTop_toBottomOf="@+id/detail_name"
                        tools:layout_editor_absoluteX="173dp" />

                    <TextView
                        android:id="@+id/detail_company"
                        style="@style/TextDetailUser"
                        android:layout_marginTop="8dp"
                        android:text="@string/company"
                        app:drawableStartCompat="@drawable/ic_office_building"
                        app:layout_constraintStart_toStartOf="@+id/detail_repo_value"
                        app:layout_constraintTop_toBottomOf="@+id/detail_repo_value" />

                    <TextView
                        android:id="@+id/detail_location"
                        style="@style/TextDetailUser"
                        android:layout_marginTop="8dp"
                        android:text="@string/location"
                        app:drawableStartCompat="@drawable/ic_baseline_location_on_18"
                        app:layout_constraintStart_toStartOf="@+id/detail_company"
                        app:layout_constraintTop_toBottomOf="@+id/detail_company" />

                    <TextView
                        android:id="@+id/detail_followers_value"
                        style="@style/TextDetailUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/followers_value"
                        app:layout_constraintEnd_toStartOf="@+id/detail_followers"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detail_username" />

                    <TextView
                        android:id="@+id/detail_followers"
                        style="@style/TextDetailUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="4dp"
                        android:drawablePadding="4dp"
                        android:text="@string/followers"
                        app:layout_constraintEnd_toStartOf="@+id/detail_following_value"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/detail_followers_value"
                        app:layout_constraintTop_toTopOf="@+id/detail_followers_value" />

                    <TextView
                        android:id="@+id/detail_following_value"
                        style="@style/TextDetailUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:drawablePadding="4dp"
                        android:text="@string/following_value"
                        app:drawableStartCompat="@drawable/ic_baseline_dot"
                        app:layout_constraintEnd_toStartOf="@+id/detail_following"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/detail_followers"
                        app:layout_constraintTop_toTopOf="@+id/detail_followers_value" />

                    <TextView
                        android:id="@+id/detail_following"
                        style="@style/TextDetailUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="4dp"
                        android:text="@string/following"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/detail_following_value"
                        app:layout_constraintTop_toTopOf="@+id/detail_followers_value" />

                    <TextView
                        android:id="@+id/detail_repo_value"
                        style="@style/TextDetailUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:drawablePadding="4dp"
                        android:text="@string/repository_value"
                        app:drawableStartCompat="@drawable/ic_repo"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detail_followers_value" />

                    <TextView
                        android:id="@+id/detail_repo"
                        style="@style/TextDetailUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:drawablePadding="4dp"
                        android:text="@string/repository"
                        app:layout_constraintStart_toEndOf="@+id/detail_repo_value"
                        app:layout_constraintTop_toTopOf="@+id/detail_repo_value" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/detail_fab_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:contentDescription="@string/favorite_button"
                        app:fabSize="normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/ic_favorite_24" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/detail_tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/primaryColor"
                    android:contentDescription="@string/tabs"
                    app:tabTextColor="@color/secondaryTextColor" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/detail_view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:colorPrimary" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>